--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    android:fitsSystemWindows="true"
-    tools:context="com.crackncrunch.amplain.ui.activities.RootActivity">
+    android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -42,7 +41,7 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/auth_card"
-                style="@style/LoginCard"
+                style="@style/CustomCard.LoginCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
