--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,15 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="LoginCard">
-        <item name="android:layout_marginLeft">@dimen/spacing_medium_plus_36
-        </item>
-        <item name="android:layout_marginRight">@dimen/spacing_medium_plus_36
-        </item>
+    <style name="CustomCard">
         <item name="cardBackgroundColor">@android:color/white</item>
         <item name="cardCornerRadius">@dimen/corner_radius_2</item>
         <item name="contentPadding">@dimen/spacing_normal_16</item>
         <item name="cardElevation">@dimen/spacing_tiny_4</item>
+    </style>
+
+    <style name="CustomCard.LoginCard">
+        <item name="android:layout_marginLeft">@dimen/spacing_medium_plus_36</item>
+        <item name="android:layout_marginRight">@dimen/spacing_medium_plus_36</item>
         <item name="android:layout_marginBottom">@dimen/spacing_small_8</item>
     </style>
 
@@ -25,6 +26,7 @@
         <item name="android:layout_height">@dimen/size_medium_56</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">@dimen/font_small_12</item>
+        <item name="android:textColor">@android:color/black</item>
         <!--TODO: use the custom font properly-->
         <!--<item name="android:fontFamily">@string/roboto-regular</item>-->
         <item name="android:textStyle">bold</item>
