--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -1,135 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinator_container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_container"
+        android:background="@color/grey_light"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/logo_img"
-            android:layout_width="@dimen/login_logo_width_70"
-            android:layout_height="@dimen/login_logo_height_100"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/spacing_bigger_plus_48"
-            android:src="@drawable/firebase_icon"/>
-
-        <TextView
-            android:id="@+id/app_name_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/logo_img"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/spacing_medial_24"
-            android:text="@string/app_name"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/size_normal_40"/>
-
-        <com.crackncrunch.amplain.ui.custom_views.AuthPanel
-            android:id="@+id/auth_wrapper"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_layout"
+            android:theme="@style/AppTheme.AppBarOverlay"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/social_wrap"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/auth_card"
-                style="@style/CustomCard.LoginCard"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                tools:visibility="visible">
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/login_email_wrap"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <EditText
-                            android:id="@+id/login_email_et"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/enter_email"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@android:color/black"
-                            android:textColorHint="@android:color/darker_gray"
-                            android:textSize="@dimen/font_small_14"/>
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/login_password_wrap"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <EditText
-                            android:id="@+id/login_password_et"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/enter_password"
-                            android:inputType="textPassword"
-                            android:textColor="@android:color/black"
-                            android:textColorHint="@android:color/darker_gray"
-                            android:textSize="@dimen/font_small_14"/>
-                    </android.support.design.widget.TextInputLayout>
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <Button
-                android:id="@+id/show_catalog_btn"
-                style="@style/CustomButton"
-                android:text="@string/view_catalog"
-                android:theme="@style/ShowBtn"/>
-
-            <Button
-                android:id="@+id/login_btn"
-                style="@style/CustomButton"
-                android:text="@string/login"
-                android:theme="@style/StartBtn"/>
-        </com.crackncrunch.amplain.ui.custom_views.AuthPanel>
-
-        <LinearLayout
-            android:id="@+id/social_wrap"
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="@dimen/spacing_normal_16"
-            android:paddingTop="@dimen/spacing_normal_16">
+            android:layout_height="wrap_content">
 
-            <ImageButton
-                android:layout_width="@dimen/size_medium_56"
-                android:layout_height="@dimen/size_medium_56"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:background="@drawable/vk_selector_btn"/>
+        </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
-            <ImageButton
-                android:layout_width="@dimen/size_medium_56"
-                android:layout_height="@dimen/size_medium_56"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:background="@drawable/twitter_selector_btn"/>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        style="@style/NavigationDrawer"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/activity_root_drawer">
 
-            <ImageButton
-                android:layout_width="@dimen/size_medium_56"
-                android:layout_height="@dimen/size_medium_56"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"
-                android:background="@drawable/fb_selector_btn"/>
-
-        </LinearLayout>
-    </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.design.widget.NavigationView>
+</android.support.v4.widget.DrawerLayout>
