--- a/app/src/main/res/layout/screen_catalog.xml
+++ b/app/src/main/res/layout/screen_catalog.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.crackncrunch.amplain.ui.screens.catalog.CatalogView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/product_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_above="@+id/btn_wrap"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:id="@+id/btn_wrap"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/add_to_card_btn"
             style="@style/CustomButton"
+            android:theme="@style/StartBtn"
             android:layout_marginBottom="@dimen/spacing_normal_16"
             android:layout_marginTop="@dimen/spacing_normal_16"
-            android:text="@string/add_to_cart"
-            android:theme="@style/StartBtn"/>
+            android:text="@string/add_to_cart"/>
 
     </LinearLayout>
-
-</RelativeLayout>
+</com.crackncrunch.amplain.ui.screens.catalog.CatalogView>
