--- a/app/src/main/res/layout/screen_product.xml
+++ b/app/src/main/res/layout/screen_product.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<com.crackncrunch.amplain.ui.screens.product.ProductView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/product_card"
@@ -11,7 +12,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/spacing_small_8"
+            android:paddingLeft="@dimen/spacing_normal_16"
+            android:paddingRight="@dimen/spacing_normal_16"
+            android:paddingTop="@dimen/spacing_normal_16">
 
             <TextView
                 android:id="@+id/product_name_txt"
@@ -25,18 +30,17 @@
 
             <com.crackncrunch.amplain.utils.AspectRatioImageView
                 android:id="@+id/product_image"
-                android:src="@drawable/radio_image"
                 android:scaleType="centerCrop"
+                android:src="@drawable/radio_image"
+                android:layout_marginTop="@dimen/spacing_small_8"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/product_image_height"
-                android:layout_marginLeft="@dimen/spacing_normal_16"
-                android:layout_marginRight="@dimen/spacing_normal_16"/>
+                android:layout_height="@dimen/product_image_height"/>
 
             <LinearLayout
-                android:paddingTop="@dimen/spacing_medial_24"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/spacing_medial_24">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -63,7 +67,7 @@
                         <TextView
                             android:id="@+id/product_count_txt"
                             style="@style/ProductText.ValuePrice"
-                            android:text="1"/>
+                            android:text="@string/sample_quantity"/>
 
                         <ImageButton
                             android:id="@+id/plus_btn"
@@ -73,11 +77,11 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                     <TextView
                         style="@style/ProductText.LabelPrice"
@@ -92,4 +96,4 @@
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+</com.crackncrunch.amplain.ui.screens.product.ProductView>
