--- a/app/src/main/res/layout/screen_account.xml
+++ b/app/src/main/res/layout/screen_account.xml
@@ -7,167 +7,174 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar_account"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="wrap_content">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar_account"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/collapsing_toolbar_height"
-            android:background="@drawable/account_header_bg"
-            app:contentScrim="@color/colorAccent"
-            app:layout_scrollFlags="scroll|snap">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <TextView
-                android:id="@+id/profile_name_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|top"
-                android:layout_marginTop="@dimen/spacing_bigger_plus_48"
-                android:fontFamily="@string/roboto_regular"
-                android:text="@string/user_full_name"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/font_medium_32"/>
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/user_avatar_img"
-        android:layout_width="@dimen/account_avatar_width"
-        android:layout_height="@dimen/account_avatar_height"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="@dimen/account_avatar_margin_top"
-        android:elevation="4dp"
-        android:background="@drawable/flat_color_bg"
-        app:civ_border_color="@color/color_white"
-        app:civ_border_width="@dimen/line_size_2"
-        app:layout_anchorGravity="bottom|center_horizontal"
-        app:layout_behavior="com.crackncrunch.amplain.ui.behaviors.AvatarImageBehavior"/>
-
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/spacing_normal_16"
-        android:paddingRight="@dimen/spacing_normal_16"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="@dimen/spacing_larger_86"
-            android:paddingBottom="@dimen/spacing_medium_32">
-
-            <LinearLayout
-                android:id="@+id/profile_name_wrapper"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_normal_16"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:layout_height="@dimen/collapsing_toolbar_height"
+                android:background="@drawable/account_header_bg"
+                app:contentScrim="@color/colorAccent"
+                app:layout_scrollFlags="scroll|snap">
 
-                <ImageView
-                    style="@style/Icon"
-                    android:src="@drawable/ic_account_circle_black_24dp"/>
+                <TextView
+                    android:id="@+id/profile_name_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|top"
+                    android:layout_marginTop="@dimen/spacing_bigger_plus_48"
+                    android:fontFamily="@string/roboto_regular"
+                    android:text="@string/user_full_name"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/font_medium_32"/>
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:paddingLeft="@dimen/spacing_small_8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/user_avatar_img"
+            android:layout_width="@dimen/account_avatar_width"
+            android:layout_height="@dimen/account_avatar_height"
+            android:layout_gravity="top|center_horizontal"
+            android:layout_marginTop="@dimen/account_avatar_margin_top"
+            android:background="@drawable/flat_color_bg"
+            android:elevation="4dp"
+            app:civ_border_color="@color/color_white"
+            app:civ_border_width="@dimen/line_size_2"
+            app:layout_anchorGravity="bottom|center_horizontal"
+            app:layout_behavior="com.crackncrunch.amplain.ui.behaviors.AvatarImageBehavior"/>
 
-                    <TextView
-                        android:text="@string/user_full_name_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                    <EditText
-                        android:id="@+id/user_full_name_et"
-                        android:paddingLeft="@dimen/spacing_zero"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/grey"
-                        android:hint="@string/user_full_name_label"
-                        android:inputType="textPersonName"
-                        android:text="@string/user_full_name"
-                        android:textColor="@color/account_title_color"
-                        android:textSize="@dimen/font_normal_16"/>
-                </LinearLayout>
-            </LinearLayout>
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/spacing_normal_16"
+            android:paddingRight="@dimen/spacing_normal_16"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing_normal_16"
-                android:orientation="horizontal">
-
-                <ImageView
-                    style="@style/Icon"
-                    android:src="@drawable/ic_call_black_24dp"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/spacing_medium_32"
+                android:paddingTop="@dimen/spacing_larger_86">
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:paddingLeft="@dimen/spacing_small_8"
+                    android:id="@+id/profile_name_wrapper"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_normal_16"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
-                    <TextView
-                        android:text="@string/phone_label"
+                    <ImageView
+                        style="@style/Icon"
+                        android:contentDescription="@string/dummy_content_description"
+                        android:src="@drawable/ic_account_circle_black_24dp"/>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:paddingLeft="@dimen/spacing_small_8"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content">
 
-                    <EditText
-                        android:id="@+id/user_phone_et"
-                        android:paddingLeft="@dimen/spacing_zero"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/grey"
-                        android:enabled="false"
-                        android:inputType="phone"
-                        android:text="@string/phone"/>
+                        <TextView
+                            android:text="@string/user_full_name_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
+                        <EditText
+                            android:id="@+id/user_full_name_et"
+                            android:paddingLeft="@dimen/spacing_zero"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/grey"
+                            android:hint="@string/user_full_name_label"
+                            android:inputType="textPersonName"
+                            android:text="@string/user_full_name"
+                            android:textColor="@color/account_title_color"
+                            android:textSize="@dimen/font_normal_16"/>
+                    </LinearLayout>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_normal_16"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        style="@style/Icon"
+                        android:contentDescription="@string/dummy_content_description"
+                        android:src="@drawable/ic_call_black_24dp"/>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:paddingLeft="@dimen/spacing_small_8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:text="@string/phone_label"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <EditText
+                            android:id="@+id/user_phone_et"
+                            android:paddingLeft="@dimen/spacing_zero"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@color/grey"
+                            android:enabled="false"
+                            android:inputType="phone"
+                            android:text="@string/phone"/>
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View style="@style/HorizontalDivider"/>
+
+                <TextView
+                    style="@style/CustomText.AccountTitle"
+                    android:text="@string/delivery_address"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/address_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
+                <Button
+                    android:id="@+id/add_address_btn"
+                    style="@style/CustomButtonAccount"
+                    android:text="@string/add_address"
+                    android:theme="@style/StartBtn"/>
+
+                <View
+                    style="@style/HorizontalDivider"
+                    android:layout_marginTop="@dimen/spacing_normal_16"/>
+
+                <TextView
+                    style="@style/CustomText.AccountTitle"
+                    android:text="@string/push_notifications"/>
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/notification_order_sw"
+                    style="@style/CustomSwitch"
+                    android:text="@string/order_status_notification"/>
+
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/notification_promo_sw"
+                    style="@style/CustomSwitch"
+                    android:text="@string/special_offer_notification"/>
+
             </LinearLayout>
-
-            <View style="@style/HorizontalDivider"/>
-
-            <TextView
-                style="@style/CustomText.AccountTitle"
-                android:text="@string/delivery_address"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/address_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"/>
-
-            <Button
-                android:id="@+id/add_address_btn"
-                style="@style/CustomButtonAccount"
-                android:text="@string/add_address"
-                android:theme="@style/StartBtn"/>
-
-            <View
-                style="@style/HorizontalDivider"
-                android:layout_marginTop="@dimen/spacing_normal_16"/>
-
-            <TextView
-                style="@style/CustomText.AccountTitle"
-                android:text="@string/push_notifications"/>
-
-            <android.support.v7.widget.SwitchCompat
-                android:id="@+id/notification_order_sw"
-                style="@style/CustomSwitch"
-                android:text="@string/order_status_notification"/>
-
-            <android.support.v7.widget.SwitchCompat
-                android:id="@+id/notification_promo_sw"
-                style="@style/CustomSwitch"
-                android:text="@string/special_offer_notification"/>
-
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+        </android.support.v4.widget.NestedScrollView>
+    </android.support.design.widget.CoordinatorLayout>
 </com.crackncrunch.amplain.ui.screens.account.AccountView>
