--- a/app/src/main/res/layout/screen_product.xml
+++ b/app/src/main/res/layout/screen_product.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.crackncrunch.amplain.ui.screens.product.ProductView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/product_card"
@@ -12,88 +12,126 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/spacing_small_8"
-            android:paddingLeft="@dimen/spacing_normal_16"
-            android:paddingRight="@dimen/spacing_normal_16"
-            android:paddingTop="@dimen/spacing_normal_16">
-
-            <TextView
-                android:id="@+id/product_name_txt"
-                style="@style/ProductText.ProductTitle"
-                android:text="@string/sample_item"/>
-
-            <TextView
-                android:id="@+id/product_description_txt"
-                style="@style/ProductText.ProductDescription"
-                android:text="@string/lorem_ipsum"/>
-
-            <com.crackncrunch.amplain.utils.AspectRatioImageView
-                android:id="@+id/product_image"
-                android:scaleType="centerCrop"
-                android:src="@drawable/radio_image"
-                android:layout_marginTop="@dimen/spacing_small_8"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/product_image_height"/>
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingTop="@dimen/spacing_medial_24">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/spacing_small_8"
+                android:paddingLeft="@dimen/spacing_normal_16"
+                android:paddingRight="@dimen/spacing_normal_16"
+                android:paddingTop="@dimen/spacing_normal_16">
+
+                <TextView
+                    android:id="@+id/product_name_txt"
+                    style="@style/ProductText.ProductTitle"
+                    android:text="@string/sample_item"/>
+
+                <TextView
+                    android:id="@+id/product_description_txt"
+                    style="@style/ProductText.ProductDescription"
+                    android:text="@string/lorem_ipsum"/>
+
+                <com.crackncrunch.amplain.utils.AspectRatioImageView
+                    android:id="@+id/product_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_small_8"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-                        style="@style/ProductText.LabelPrice"
-                        android:text="@string/quantity"/>
+                    android:baselineAligned="false"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/spacing_normal_16">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <ImageButton
-                            android:id="@+id/minus_btn"
-                            style="@style/CountBtn"
-                            android:src="@drawable/ic_remove_black_24dp"/>
+                        android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/product_count_txt"
-                            style="@style/ProductText.ValuePrice"
-                            android:text="@string/sample_quantity"/>
+                            style="@style/ProductText.LabelPrice"
+                            android:text="@string/quantity"/>
 
-                        <ImageButton
-                            android:id="@+id/plus_btn"
-                            style="@style/CountBtn"
-                            android:src="@drawable/ic_add_black_24dp"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <ImageButton
+                                android:id="@+id/minus_btn"
+                                style="@style/CountBtn"
+                                android:contentDescription="@string/dummy_content_description"
+                                android:src="@drawable/ic_remove_black_24dp"/>
+
+                            <TextView
+                                android:id="@+id/product_count_txt"
+                                style="@style/ProductText.ValuePrice"
+                                android:text="@string/sample_quantity"/>
+
+                            <ImageButton
+                                android:id="@+id/plus_btn"
+                                style="@style/CountBtn"
+                                android:contentDescription="@string/dummy_content_description"
+                                android:src="@drawable/ic_add_black_24dp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            style="@style/ProductText.LabelPrice"
+                            android:text="@string/price"/>
+
+                        <TextView
+                            android:id="@+id/product_price_txt"
+                            style="@style/ProductText.ValuePrice"
+                            android:text="@string/sample_price"/>
+
                     </LinearLayout>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        style="@style/ProductText.LabelPrice"
-                        android:text="@string/price"/>
-
-                    <TextView
-                        android:id="@+id/product_price_txt"
-                        style="@style/ProductText.ValuePrice"
-                        android:text="@string/sample_price"/>
-
-                </LinearLayout>
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line_size_1"
+                android:background="@color/grey_light"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/spacing_small_8"
+                android:paddingRight="@dimen/spacing_normal_16">
+
+                <CheckBox
+                    android:id="@+id/favorite_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:button="@drawable/favorite_selector_btn"/>
+
+                <Button
+                    android:id="@+id/show_more_btn"
+                    style="?attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/show_more"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorAccent"/>
+            </RelativeLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </com.crackncrunch.amplain.ui.screens.product.ProductView>
