--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="AspectRatioImageView">
-        <attr name="widthRatio" format="integer"/>
-        <attr name="heightRatio" format="integer"/>
+        <attr name="aspectRatio" format="float"/>
     </declare-styleable>
 
     <declare-styleable name="AvatarImageBehavior">
