--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -80,4 +80,6 @@
     <dimen name="account_avatar_height">140dp</dimen>
     <dimen name="account_avatar_width">140dp</dimen>
     <dimen name="pointer_size">24dp</dimen>
+    <dimen name="toolbar_height">48dp</dimen>
+    <dimen name="product_info_card_height">145dp</dimen>
 </resources>
