--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -82,4 +82,6 @@
     <dimen name="pointer_size">24dp</dimen>
     <dimen name="toolbar_height">48dp</dimen>
     <dimen name="product_info_card_height">145dp</dimen>
+    <dimen name="fab_right_space">24dp</dimen>
+    <dimen name="fab_bottom_space">16dp</dimen>
 </resources>
