--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -205,4 +205,7 @@
         <item name="android:colorForeground">@color/color_grey_darker</item>
     </style>
 
+    <style name="EditTextProfile">
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
