--- a/app/src/main/res/layout/screen_catalog.xml
+++ b/app/src/main/res/layout/screen_catalog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.crackncrunch.amplain.ui.screens.catalog.CatalogView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,6 +24,14 @@
             android:layout_alignParentBottom="true"
             android:gravity="center"
             android:orientation="vertical">
+
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/indicator"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size_small_24"
+                app:ci_animator="@animator/indicator_animator"
+                app:ci_drawable="@drawable/primary_radius"
+                app:ci_drawable_unselected="@drawable/black_radius"/>
 
             <Button
                 android:id="@+id/add_to_card_btn"
