--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,6 +5,12 @@
         <item name="android:windowBackground">@drawable/background</item>
         <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
         <item name="colorControlNormal">@color/colorPrimaryDark</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+        <item name="android:windowSharedElementEnterTransition">
+            @android:transition/move
+        </item>
     </style>
 
     <style name="StartBtn" parent="Base.Widget.AppCompat.Button">
