--- a/app/src/main/res/drawable/primary_radius.xml
+++ b/app/src/main/res/drawable/primary_radius.xml
@@ -3,4 +3,7 @@
        android:shape="oval">
     <solid
         android:color="@color/colorAccent"/>
+    <size
+        android:width="8dp"
+        android:height="8dp"/>
 </shape>
