--- a/app/src/main/res/layout/screen_description.xml
+++ b/app/src/main/res/layout/screen_description.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.crackncrunch.amplain.ui.screens.product_details.description.DescriptionView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
@@ -96,7 +96,7 @@
                                     android:id="@+id/minus_btn"
                                     style="@style/CountBtn"
                                     android:contentDescription="@string/dummy_content_description"
-                                    android:src="@drawable/ic_remove_black_24dp"/>
+                                    app:srcCompat="@drawable/ic_remove_black_24dp"/>
 
                                 <TextView
                                     android:id="@+id/product_count_txt"
@@ -107,7 +107,7 @@
                                     android:id="@+id/plus_btn"
                                     style="@style/CountBtn"
                                     android:contentDescription="@string/dummy_content_description"
-                                    android:src="@drawable/ic_add_black_24dp"/>
+                                    app:srcCompat="@drawable/ic_add_black_24dp"/>
                             </LinearLayout>
                         </LinearLayout>
 
